--- a/client/package.json
+++ b/client/package.json
@@ -2,21 +2,32 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://43.204.231.33:8004",
+  "proxy": "http://43.204.231.33:8004",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.0.6",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.28.1",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
