--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^1.0.6",
+    "@react-three/drei": "^9.103.0",
+    "@react-three/fiber": "^8.16.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
