--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 EMAIL=vineethvinu2216@gmail.com
 PASSWORD=zqcv zthh mrfn qxfc
-PORT=8004
-MONGODB_CONNECTION_STRING=mongodb+srv://krishnavineeth316:vineeth@cluster0.uzvbjet.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5001
+MONGODB_CONNECTION_STRING=mongodb+srv://amazona-hostinger:amazona-hostinger@cluster0.uzvbjet.mongodb.net/
