--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 EMAIL=vineethvinu2216@gmail.com
 PASSWORD=zqcv zthh mrfn qxfc
 PORT=5001
-# MONGODB_CONNECTION_STRING=mongodb+srv://amazona-hostinger:amazona-hostinger@cluster0.uzvbjet.mongodb.net/
+MONGODB_CONNECTION_STRING=mongodb+srv://amazona-hostinger:amazona-hostinger@cluster0.uzvbjet.mongodb.net/
