--- a/client/package.json
+++ b/client/package.json
@@ -34,11 +34,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "HOST=0.0.0.0 PORT=3000 ALLOWED_HOSTS='.17columns.com' react-scripts start",
+    "start": "HOST=0.0.0.0 PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+  },  
   "eslintConfig": {
     "extends": [
       "react-app",
